<resources>
    <string name="app_name">HelpingPeople</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_updateprofile">Update Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back">Back</string>
    <string name="ngo1">Raygad Pratishthan</string>
    <string name="ngo2">Ummid NGO</string>
    />
    <string name="ngo3">Disha Foundation</string>
    <string name="contact_898396353">Contact- 898396353</string>
    <string name="title_activity_admin">admin</string>

</resources>